@@ -1,41 +1,72 @@
 plugins {
-    id "com.jfrog.bintray" version "1.1"
-    id "com.github.jruby-gradle.base" version "0.1.5"
     id "java"
     id "checkstyle"
     id "jacoco"
+    id "maven"
+    id 'maven-publish'
+    id "org.embulk.embulk-plugins" version "0.4.2"
 }
-import com.github.jrubygradle.JRubyExec
+
 repositories {
     mavenCentral()
     jcenter()
-}
-configurations {
-    provided
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-version = "0.3.0"
+group = "com.treasuredata.embulk.plugins"
+description = "An Embulk plugin to loads records from Azure Blob Storage."
+version = "0.3.1"
+
+def embulkVersion = '0.10.25'
 
 dependencies {
-    compile  "org.embulk:embulk-core:0.9.12"
-    provided "org.embulk:embulk-core:0.9.12"
+    compileOnly "org.embulk:embulk-api:$embulkVersion"
+    compileOnly "org.embulk:embulk-spi:$embulkVersion"
+
+    compile("org.embulk:embulk-util-config:0.2.0") {
+        // Conflict with Embulk Core
+        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-annotations'
+        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-core'
+        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
+        exclude group: 'com.fasterxml.jackson.datatype', module: 'jackson-datatype-jdk8'
+        exclude group: 'javax.validation', module: 'validation-api'
+    }
+
+    compile('org.embulk:embulk-util-retryhelper-jetty92:0.8.1') {
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+    }
+
+    compile 'org.embulk:embulk-util-file:0.1.1'
+
+    // Explicit dependencies for embulk-util-* & embulk-base-restclient that matches with Embulk 0.10.19
+    compile 'com.fasterxml.jackson.core:jackson-core:2.6.7'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.6.7'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.7'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.6.7'
+    compile 'javax.validation:validation-api:1.1.0.Final'
+
+    compile 'com.google.guava:guava:18.0'
+    compile 'org.apache.commons:commons-lang3:3.4'
+
+    compile fileTree(dir: 'libs', include: '*.jar')
 
     compile "com.microsoft.azure:azure-storage:8.0.0"
 
     testCompile "junit:junit:4.12"
-    testCompile "org.embulk:embulk-core:0.9.12:tests"
-    testCompile "org.embulk:embulk-standards:0.9.12"
+    testCompile "org.embulk:embulk-core:$embulkVersion"
+    testCompile "org.embulk:embulk-core:$embulkVersion:tests"
+    testCompile "org.embulk:embulk-deps:$embulkVersion"
+    testCompile "org.embulk:embulk-standards:$embulkVersion"
 }
 
-task classpath(type: Copy, dependsOn: ["jar"]) {
-    doFirst { file("classpath").deleteDir() }
-    from (configurations.runtime - configurations.provided + files(jar.archivePath))
-    into "classpath"
+test {
+    jvmArgs '-XX:MaxPermSize=128M', '-Xmx2048m'
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
-clean { delete "classpath" }
 
 checkstyle {
     configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
@@ -54,29 +85,30 @@ task checkstyle(type: Checkstyle) {
     source = sourceSets.main.allJava + sourceSets.test.allJava
 }
 
-task gem(type: JRubyExec, dependsOn: ["build", "gemspec", "classpath"]) {
-    jrubyArgs "-rrubygems/gem_runner", "-eGem::GemRunner.new.run(ARGV)", "build"
-    script "build/gemspec"
-    doLast { ant.move(file: "${project.name}-${project.version}.gem", todir: "pkg") }
+jacocoTestReport {
+    group = "Reporting"
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination file("${buildDir}/reports/coverage")
+    }
 }
 
-task gemspec << { file("build/gemspec").write($/
-Gem::Specification.new do |spec|
-  spec.name          = "${project.name}"
-  spec.version       = "${project.version}"
-  spec.authors       = ["Satoshi Akama"]
-  spec.summary       = %[Microsoft Azure Blob Storage file input plugin for Embulk]
-  spec.description   = %[Reads files stored on Microsoft Azure Blob Storage.]
-  spec.email         = ["satoshiakama@gmail.com"]
-  spec.licenses      = ["Apache-2.0"]
-  spec.homepage      = "https://github.com/embulk/embulk-input-azure_blob_storage"
+embulkPlugin {
+    mainClass = "org.embulk.input.azure_blob_storage.AzureBlobStorageInputPlugin"
+    category = "input"
+    type = "azure_blob_storage"
+}
 
-  spec.files         = `git ls-files`.split("\n") + Dir["classpath/*.jar"]
-  spec.test_files    = spec.files.grep(%r"^(test|spec)/")
-  spec.require_paths = ["lib"]
-
-  spec.add_development_dependency 'bundler', ['~> 1.0']
-  spec.add_development_dependency 'rake', ['>= 10.0']
-end
-/$)
+gem {
+    authors = [ "Satoshi Akama" ]
+    email = [ "satoshiakama@gmail.com" ]
+    summary = "Gigya input plugin for Embulk"
+    homepage = "https://github.com/embulk/embulk-input-azure_blob_storage"
+    licenses = [ "Apache-2.0" ]
+    // Later versions of (somewhere before 0.4.2) Embulk Gradle plugin,
+    // local dependencies won't get packed into gems automatically anymore.
+    into("classpath/") {
+        from "libs/gigya-java-sdk-3.2.3.jar"
+    }
 }
